--- a/achievements.html
+++ b/achievements.html
@@ -10,120 +10,147 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 
     <style>
-        body {
-            font-family: 'Roboto', sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f4f4f4;
-            color: #333;
-        }
+body {
+    font-family: 'Roboto', sans-serif;
+    margin: 0;
+    padding: 0;
+    background-color: #f4f4f4;
+    color: #333;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+}
 
-        header {
-            background-color: #007bff;
-            color: #fff;
-            padding: 20px 0;
-            text-align: center;
-        }
+header {
+    background-color: #007bff;
+    color: #fff;
+    padding: 20px 0;
+    text-align: center;
+}
 
-        nav {
-            display: flex;
-            justify-content: center;
-            background-color: #333;
-        }
+nav {
+    display: flex;
+    justify-content: center;
+    background-color: #333;
+    flex-wrap: wrap;
+}
 
-        nav a {
-            color: #fff;
-            padding: 15px 20px;
-            text-decoration: none;
-            display: inline-block;
-        }
+nav a {
+    color: #fff;
+    padding: 15px 20px;
+    text-decoration: none;
+    display: inline-block;
+}
 
-        nav a:hover {
-            background-color: #575757;
-        }
+nav a:hover {
+    background-color: #575757;
+}
 
-        .container {
-            max-width: 960px;
-            margin: 40px auto;
-            padding: 0 20px;
-        }
+.container {
+    max-width: 960px;
+    margin: 40px auto;
+    padding: 0 20px;
+    flex: 1; /* ensures container grows vertically */
+}
 
-        .section-title {
-            text-align: center;
-            font-size: 2.5em;
-            margin-bottom: 0.5em;
-            color: #007bff;
-        }
+.section-title {
+    text-align: center;
+    font-size: 2.5em;
+    margin-bottom: 0.5em;
+    color: #007bff;
+}
 
-        .section-desc {
-            text-align: center;
-            font-size: 1.2em;
-            color: #666;
-            line-height: 1.6;
-            margin-bottom: 40px;
-        }
+.section-desc {
+    text-align: center;
+    font-size: 1.2em;
+    color: #666;
+    line-height: 1.6;
+    margin-bottom: 40px;
+}
 
-        .items-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-            gap: 20px;
-        }
+.items-grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+    gap: 20px;
+}
 
-        .item-card {
-            background-color: #fff;
-            border: 1px solid #ddd;
-            border-radius: 8px;
-            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-            padding: 15px;
-            text-align: center;
-        }
+.item-card {
+    background-color: #fff;
+    border: 1px solid #ddd;
+    border-radius: 8px;
+    box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+    padding: 15px;
+    text-align: center;
+}
 
-        .item-card img {
-            width: 100%;
-            height: 180px;
-            object-fit: cover;
-            border-radius: 8px;
-            margin-bottom: 15px;
-        }
+.item-card img {
+    width: 100%;
+    height: 180px;
+    object-fit: cover;
+    border-radius: 8px;
+    margin-bottom: 15px;
+}
 
-        .item-card h2 {
-            font-size: 1.5em;
-            margin-bottom: 10px;
-            color: #007bff;
-        }
+.item-card h2 {
+    font-size: 1.5em;
+    margin-bottom: 10px;
+    color: #007bff;
+}
 
-        .item-card p {
-            font-size: 1.1em;
-            color: #555;
-            margin-bottom: 8px;
-        }
+.item-card p {
+    font-size: 1.1em;
+    color: #555;
+    margin-bottom: 8px;
+}
 
-        .btn-primary {
-            display: inline-block;
-            margin: 30px auto;
-            background-color: #007bff;
-            color: white;
-            padding: 10px 20px;
-            border: none;
-            border-radius: 5px;
-            font-size: 1em;
-            cursor: pointer;
-            text-decoration: none;
-        }
+.btn-primary {
+    display: inline-block;
+    margin: 30px auto;
+    background-color: #007bff;
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    font-size: 1em;
+    cursor: pointer;
+    text-decoration: none;
+}
 
-        .btn-primary:hover {
-            background-color: #0056b3;
-        }
+.btn-primary:hover {
+    background-color: #0056b3;
+}
 
-        footer {
-            margin-top: 40px;
-            background-color: #333;
-            color: white;
-            text-align: center;
-            padding: 15px;
-            font-size: 0.9em;
-        }
-    </style>
+footer {
+    margin-top: 40px;
+    background-color: #333;
+    color: white;
+    text-align: center;
+    padding: 15px;
+    font-size: 0.9em;
+}
+
+/* Responsive adjustments */
+@media (max-width: 768px) {
+    .section-title {
+        font-size: 2em;
+    }
+    .section-desc {
+        font-size: 1.1em;
+        margin-bottom: 30px;
+    }
+    .item-card h2 {
+        font-size: 1.3em;
+    }
+    .item-card p {
+        font-size: 1em;
+    }
+    .btn-primary {
+        font-size: 0.95em;
+        padding: 8px 16px;
+    }
+}
+</style>
+
 </head>
 
 <body>
