--- a/contact.html
+++ b/contact.html
@@ -9,101 +9,121 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 
     <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 
-        body {
-            font-family: 'Roboto', sans-serif;
-            background-color: #f4f4f4;
-            color: #333;
-            min-height: 100vh;
-            display: flex;
-            flex-direction: column;
-        }
+body {
+    font-family: 'Roboto', sans-serif;
+    background-color: #f4f4f4;
+    color: #333;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+}
 
-        .page-wrapper {
-            flex: 1;
-        }
+.page-wrapper {
+    flex: 1;
+}
 
-        header {
-            background-color: #007bff;
-            color: white;
-            text-align: center;
-            padding: 25px 0;
-        }
+header {
+    background-color: #007bff;
+    color: white;
+    text-align: center;
+    padding: 25px 0;
+}
 
-        nav {
-            display: flex;
-            justify-content: center;
-            background-color: #333;
-        }
+nav {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    background-color: #333;
+}
 
-        nav a {
-            color: white;
-            padding: 15px 20px;
-            text-decoration: none;
-        }
+nav a {
+    color: white;
+    padding: 15px 20px;
+    text-decoration: none;
+}
 
-        nav a:hover {
-            background-color: #575757;
-        }
+nav a:hover {
+    background-color: #575757;
+}
 
-        .container {
-            max-width: 960px;
-            margin: 40px auto;
-            padding: 30px 20px;
-            background: white;
-            border-radius: 8px;
-            box-shadow: 0 2px 6px rgba(0,0,0,0.1);
-        }
+.container {
+    max-width: 960px;
+    margin: 40px auto;
+    padding: 30px 20px;
+    background: white;
+    border-radius: 8px;
+    box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+    flex: 1;
+}
 
-        .contact h1 {
-            text-align: center;
-            font-size: 2.3em;
-            margin-bottom: 10px;
-            color: #007bff;
-        }
+.contact h1 {
+    text-align: center;
+    font-size: 2.3em;
+    margin-bottom: 10px;
+    color: #007bff;
+}
 
-        .contact p {
-            text-align: center;
-            font-size: 1.1em;
-            color: #555;
-            margin-bottom: 30px;
-        }
+.contact p {
+    text-align: center;
+    font-size: 1.1em;
+    color: #555;
+    margin-bottom: 30px;
+}
 
-        .contact-details {
-            display: flex;
-            justify-content: space-between;
-            margin-bottom: 40px;
-        }
+.contact-details {
+    display: flex;
+    justify-content: space-between;
+    gap: 20px;
+    flex-wrap: wrap;
+    margin-bottom: 40px;
+}
 
-        .contact-details div {
-            flex: 1;
-            text-align: center;
-        }
+.contact-details div {
+    flex: 1;
+    min-width: 200px;
+    text-align: center;
+}
 
-        .contact-details a {
-            color: #007bff;
-            text-decoration: none;
-            font-weight: bold;
-        }
+.contact-details a {
+    color: #007bff;
+    text-decoration: none;
+    font-weight: bold;
+}
 
-        .contact-details a:hover {
-            text-decoration: underline;
-        }
+.contact-details a:hover {
+    text-decoration: underline;
+}
 
-        footer {
-            background-color: #333;
-            color: white;
-            text-align: center;
-            padding: 15px;
-            font-size: 0.9em;
-            margin-top: auto;
-        }
-    </style>
+footer {
+    background-color: #333;
+    color: white;
+    text-align: center;
+    padding: 15px;
+    font-size: 0.9em;
+    margin-top: auto;
+}
+
+/* Mobile responsiveness */
+@media (max-width: 768px) {
+    .container {
+        margin: 20px;
+        padding: 20px 15px;
+    }
+    .contact h1 {
+        font-size: 2em;
+    }
+    .contact p {
+        font-size: 1em;
+    }
+}
+</style>
+
 </head>
 
 <body>
