--- a/index.html
+++ b/index.html
@@ -8,94 +8,132 @@
 
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
+   <style>
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 
-        body {
-            font-family: 'Roboto', sans-serif;
-            background-color: #f4f4f4;
-            color: #333;
-        }
-        header {
-            background-color: #007bff;
-            color: #fff;
-            text-align: center;
-            padding: 20px 0;
-        }
-        nav {
-            display: flex;
-            justify-content: center;
-            background-color: #333;
-        }
+body {
+    font-family: 'Roboto', sans-serif;
+    background-color: #f4f4f4;
+    color: #333;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+}
 
-        nav a {
-            color: #fff;
-            padding: 15px 20px;
-            text-decoration: none;
-            display: inline-block;
-        }
+header {
+    background-color: #007bff;
+    color: #fff;
+    text-align: center;
+    padding: 20px 0;
+}
 
-        nav a:hover {
-            background-color: #575757;
-        }
-        .container {
-            max-width: 960px;
-            margin: 40px auto;
-            padding: 0 20px;
-            display: flex;
-            align-items: center;
-            gap: 40px;
-        }
+nav {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    background-color: #333;
+}
 
-        .text-section {
-            flex: 1;
-        }
+nav a {
+    color: #fff;
+    padding: 15px 20px;
+    text-decoration: none;
+}
 
-        .text-section h1 {
-            font-size: 2.5em;
-            margin-bottom: 0.5em;
-            color: #007bff;
-        }
+nav a:hover {
+    background-color: #575757;
+}
 
-        .text-section p {
-            font-size: 1.2em;
-            margin-bottom: 20px;
-            line-height: 1.6;
-            color: #555;
-        }
-        .btn-primary {
-            background-color: #007bff;
-            color: white;
-            padding: 10px 20px;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            text-decoration: none;
-            font-size: 1em;
-            display: inline-block;
-        }
+.container {
+    max-width: 960px;
+    margin: 40px auto;
+    padding: 0 20px;
+    display: flex;
+    align-items: center;
+    gap: 40px;
+}
 
-        .btn-primary:hover {
-            background-color: #0056b3;
-        }
-        .profile-image {
-            width: 350px;
-            border-radius: 10px;
-            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
-        }
-        footer {
-            margin-top: 40px;
-            background-color: #333;
-            color: white;
-            text-align: center;
-            padding: 15px;
-            font-size: 0.9em;
-        }
-    </style>
+.text-section {
+    flex: 1;
+}
+
+.text-section h1 {
+    font-size: 2.5em;
+    margin-bottom: 0.5em;
+    color: #007bff;
+}
+
+.text-section p {
+    font-size: 1.2em;
+    margin-bottom: 20px;
+    line-height: 1.6;
+    color: #555;
+}
+
+.btn-primary {
+    background-color: #007bff;
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    text-decoration: none;
+    font-size: 1em;
+    display: inline-block;
+}
+
+.btn-primary:hover {
+    background-color: #0056b3;
+}
+
+.profile-image {
+    width: 350px;
+    border-radius: 10px;
+    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
+}
+
+/* Footer sticks at bottom */
+footer {
+    margin-top: auto;
+    background-color: #333;
+    color: white;
+    text-align: center;
+    padding: 15px;
+    font-size: 0.9em;
+}
+
+/* Mobile responsiveness */
+@media (max-width: 768px) {
+    .container {
+        flex-direction: column;
+        align-items: center;
+        margin: 20px;
+        padding: 20px 15px;
+    }
+
+    .text-section h1 {
+        font-size: 2em;
+        text-align: center;
+    }
+
+    .text-section p {
+        font-size: 1em;
+        text-align: center;
+    }
+
+    .profile-image {
+        width: 80%;
+        max-width: 300px;
+        margin-top: 20px;
+    }
+}
+</style>
+
+
 </head>
 
 <body>
