--- a/skills.html
+++ b/skills.html
@@ -9,98 +9,224 @@
     
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <style>
-      
-        body {
-            font-family: 'Roboto', sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f4f4f4;
-        }
+/* Reset */
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 
-        header {
-            background-color: #007bff;
-            color: #fff;
-            padding: 20px 0;
-            text-align: center;
-        }
+body {
+    font-family: 'Roboto', sans-serif;
+    background-color: #f4f4f4;
+    color: #333;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+}
 
-        nav {
-            display: flex;
-            justify-content: center;
-            background-color: #333;
-        }
+/* Header */
+header {
+    background-color: #007bff;
+    color: #fff;
+    padding: 20px 0;
+    text-align: center;
+}
 
-        nav a {
-            color: #fff;
-            padding: 15px 20px;
-            text-decoration: none;
-            display: inline-block;
-        }
+/* Navigation */
+nav {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    background-color: #333;
+}
 
-        nav a:hover {
-            background-color: #575757;
-        }
+nav a {
+    color: #fff;
+    padding: 15px 20px;
+    text-decoration: none;
+}
 
-        .container {
-            max-width: 960px;
-            margin: 40px auto;
-            padding: 0 20px;
-        }
+nav a:hover {
+    background-color: #575757;
+}
 
-        .skills {
-            text-align: center;
-        }
+/* General container */
+.container {
+    max-width: 960px;
+    margin: 40px auto;
+    padding: 20px;
+}
 
-        .skills h1 {
-            font-size: 2.5em;
-            margin-bottom: 0.5em;
-            color: #007bff;
-        }
+/* Headings & sections */
+h1 {
+    font-size: 2.5em;
+    color: #007bff;
+    margin-bottom: 0.5em;
+    text-align: center;
+}
 
-        .skills p {
-            font-size: 1.2em;
-            color: #666;
-            line-height: 1.6;
-        }
+p {
+    font-size: 1.2em;
+    color: #555;
+    line-height: 1.6;
+    text-align: center;
+}
 
-        .skills ul {
-            list-style: none;
-            padding: 0;
-        }
+/* Buttons */
+.btn-primary {
+    background-color: #007bff;
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    text-decoration: none;
+    font-size: 1em;
+    display: inline-block;
+    margin-top: 10px;
+}
 
-        .skills li {
-            background-color: #fff;
-            border: 1px solid #ddd;
-            border-radius: 5px;
-            padding: 10px;
-            margin: 10px 0;
-            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-            font-size: 1.2em;
-        }
+.btn-primary:hover {
+    background-color: #0056b3;
+}
 
-        .btn-primary {
-            background-color: #007bff;
-            color: white;
-            padding: 10px 20px;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            text-decoration: none;
-            font-size: 1em;
-        }
+/* Flex layouts for home/about pages */
+.text-section, .about-me {
+    flex: 1;
+}
 
-        .btn-primary:hover {
-            background-color: #0056b3;
-        }
-        footer {
-            margin-top: 40px;
-            background-color: #333;
-            color: white;
-            text-align: center;
-            padding: 15px;
-            font-size: 0.9em;
-        }
-    </style>
+.container.flex {
+    display: flex;
+    align-items: center;
+    gap: 40px;
+}
+
+/* Profile images */
+.profile-image {
+    width: 350px;
+    border-radius: 10px;
+    box-shadow: 0 4px 15px rgba(0,0,0,0.1);
+}
+
+/* Grid for achievements page */
+.items-grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+    gap: 20px;
+}
+
+.item-card {
+    background-color: #fff;
+    border: 1px solid #ddd;
+    border-radius: 8px;
+    box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+    padding: 15px;
+    text-align: center;
+}
+
+.item-card img {
+    width: 100%;
+    height: 180px;
+    object-fit: cover;
+    border-radius: 8px;
+    margin-bottom: 15px;
+}
+
+.item-card h2 {
+    font-size: 1.5em;
+    margin-bottom: 10px;
+    color: #007bff;
+}
+
+.item-card p {
+    font-size: 1.1em;
+    color: #555;
+    margin-bottom: 8px;
+}
+
+/* Contact page */
+.contact-details {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    margin-bottom: 40px;
+}
+
+.contact-details div {
+    flex: 1;
+    text-align: center;
+    margin: 10px 0;
+}
+
+.contact-details a {
+    color: #007bff;
+    text-decoration: none;
+    font-weight: bold;
+}
+
+.contact-details a:hover {
+    text-decoration: underline;
+}
+
+/* Skills page */
+.skills ul {
+    list-style: none;
+    padding: 0;
+}
+
+.skills li {
+    background-color: #fff;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    padding: 10px;
+    margin: 10px 0;
+    box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+    font-size: 1.2em;
+}
+
+/* Footer */
+footer {
+    margin-top: auto;
+    background-color: #333;
+    color: white;
+    text-align: center;
+    padding: 15px;
+    font-size: 0.9em;
+}
+
+/* Responsive adjustments */
+@media (max-width: 768px) {
+    .container.flex {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .text-section, .about-me {
+        text-align: center;
+    }
+
+    h1 {
+        font-size: 2em;
+    }
+
+    p {
+        font-size: 1em;
+    }
+
+    .profile-image {
+        width: 80%;
+        max-width: 300px;
+        margin-top: 20px;
+    }
+
+    .contact-details {
+        flex-direction: column;
+        gap: 20px;
+    }
+}
+</style>
+
 </head>
 <body>
  
