--- a/skills.html
+++ b/skills.html
@@ -250,9 +250,9 @@ footer {
             <h1>Skills Highlights </h1>
             <p>Here are some of the key technical skills I've developed through my studies and projects:</p>
             <ul>
-                <li>Microsoft Office: Able to use Word and PowerPoint effectively for assignments and documentation.</li>
+                <li>Microsoft Office: Able to use Word,Excel and PowerPoint effectively for assignments and documentation.</li>
                 <li>Team collaboration: Communicates clearly, asks the right questions, and works well when given structure and expectations.</li>
-                <li>Problem solving : Structured thinking , breaking down things down step by step and think logically to find solutions  .</li>
+                <li>Problem solving : Structured thinker with the ability to break down complex problems step by step and apply logical reasoning to find effective solutions. .</li>
                 <li>SQL basics : Basic understanding in writing and optimizing queries for database management.</li>
                 <li>C# basics: Basic understanding of creating backend applications with ASP.NET.</li>
                 
